--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,24 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap" rel="stylesheet">
-  <title>Zikmes TZ</title>
+  <title>Autoparus TZ</title>
 </head>
 
 <body id="body">
+  <header class="header">
+    <div class="header-wrapper">
+      <div class="search-wrapper">
+        <input class="search-wrapper__input" type="text" placeholder="new resourse..." maxlength="30">
+        <button class="search-wrapper__button"><i class="search-button-text">Search</i></button>
+      </div>
+    </div>
+  </header>
+  <main class="main">
+    <div class="main-wrapper">
+      <iframe id="main-wrapper__iframe" src="https://www.autoparus.com/" alt>
+     </iframe>
+    </div>
+  </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
