--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -16,15 +16,15 @@
   <header class="header">
     <div class="header-wrapper">
       <div class="search-wrapper">
-        <input class="search-wrapper__input" type="text" placeholder="new resourse..." maxlength="30">
-        <button class="search-wrapper__button"><i class="search-button-text">Search</i></button>
+        <input class="search-wrapper__input" type="text" placeholder="домен ресурса...">
+        <button class="search-wrapper__button"><i class="search-button-text">Поиск</i></button>
       </div>
     </div>
   </header>
   <main class="main">
     <div class="main-wrapper">
-      <iframe id="main-wrapper__iframe" src="https://www.autoparus.com/" alt>
-     </iframe>
+      <iframe id="main-wrapper__iframe" src="https://autoparus.com/">
+      </iframe>
     </div>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
