--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
 <body id="body">
   <header class="header">
+    <button class="back-home-button">На стартовую страницу</button>
     <div class="header-wrapper">
       <div class="search-wrapper">
         <input class="search-wrapper__input" type="text" placeholder="домен ресурса...">
