feat: add photo animation

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,17 @@
   </header>
   <main class="main">
     <div class="main-wrapper">
-      <iframe id="main-wrapper__iframe" src="https://autoparus.com/">
-      </iframe>
+      <iframe id="main-wrapper__iframe" src="https://autoparus.com/"></iframe>
     </div>
   </main>
+  <footer class="footer">
+    <div class="footer-wrapper">
+      <div class="main-wrapper__photo">
+        <img class="animation-photo" src="./assets/618ad4cc05105.webp" alt="man">
+      </div>
+    </div>
+
+  </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
